--- a/pulse.html
+++ b/pulse.html
@@ -11,6 +11,14 @@
 
 <body>
     <h1>Focus</h1>
+    <div class="page">
+        <div class="pulse">
+            <div id="circle"></div>
+        </div>
+        <div class="calm">
+            
+        </div>
+    </div>
 </body>
 
 </html>
