--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
 
 <body>
     <h1>Focus</h1>
+
+    <!--horizontal nav bar-->
+    <div id="nav">
+        <ul>
+            <li><a
+                href="index.html">Home</a>
+            </li>
+            <li><a
+                href="timer.html">About</a>
+            </li>
+            <li><a
+                href=".html">Contact</a>
+            </li>
+        </ul>
+    </div>
+    
+
 </body>
 
 </html>
