--- a/timer.html
+++ b/timer.html
@@ -5,16 +5,15 @@
     <!--Use jquery-->
     <script src="scripts.js" defer></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="timerstyles.css">
     <title>focuspoint</title>
 </head>
 
 <body>
-    <h1>Focus</h1>
+    <h1>FocusPoint</h1>
     <div id="background">
         <div id="timer-row-1">
-            <div id="timer-flex">
-
+            <div id="timer-col-1">
                 <div id="timer">
                     <div id="minutes">00</div>
                     <div id="seconds">00</div>
@@ -25,14 +24,13 @@
                     <button id="reset">Reset</button>
                 </div>
             </div>
+            <div id="timer-col-2">
+            </div>
         </div>
         <div id="timer-row-2">
             <div id="timer-col-1">
-
             </div>
-
             <div id="timer-col-2">
-
             </div>
         </div>
     </div>
