Home page level up

--- a/index.html
+++ b/index.html
@@ -10,21 +10,29 @@
 </head>
 
 <body>
-    <h1>Focus</h1>
 
     <!--horizontal nav bar-->
     <div id="nav">
         <ul>
+            <li>
+                <h1>Focus</h1>
+            </li>
             <li><a
                 href="index.html">Home</a>
             </li>
             <li><a
-                href="timer.html">About</a>
+                href="timer.html">Timer</a>
             </li>
             <li><a
-                href=".html">Contact</a>
+                href="pulse.html">Pulse</a>
             </li>
         </ul>
+    </div>
+
+    <div id="description">
+        <h2>Introducing the ultimate productivity tool</h2>
+        <p>Our app helps you stay focused and achieve your goals.  With a variety of customizable options, including timers, noise blocking, and task tracking, our app helps you eliminate distractions and stay on task.</p>
+        <p>Whether you're working, studying, or trying to get things done at home, our app is the perfect solution for staying focused and getting things done.</p>
     </div>
     
 
