--- a/timer.html
+++ b/timer.html
@@ -15,11 +15,18 @@
         <div id="timer-row-1">
             <div id="timer-col-1">
                 <div id="timer">
-                    <div id="minutes">00</div>
-                    <div id="seconds">00</div>
+                    <div id="timer-nums">
+                        <div id="minutes">00</div>
+                        :
+                        <div id="seconds">00</div>
+                    </div>
+                    <div id="time-inputs">
+                        <input type="number" id="mins-input" min="0">
+                        <input type="number" id="secs-input" min="0">
+                    </div>
                 </div>
                 <div id="buttons">
-                    <button id="start">Start</button>
+                    <button onclick="inputChange()" id="start">Start</button>
                     <button id="pause">Pause</button>
                     <button id="reset">Reset</button>
                 </div>
