Circle finally pulsing!

--- a/pulse.html
+++ b/pulse.html
@@ -13,12 +13,13 @@
     <h1>FocusPoint</h1>
     <div class="top">
         <div class="pulse">
-            <div class="circle">I am inside help me</div>
+            <div id="circlePulse"></div>
+            <div id="circle"></div>
         </div>
     </div>
     <div class="bottom">
         <div class="calm">
-
+            <h3>Calm yourself, focus on the point for as long as you can.<h3>
         </div>
         <div class="skip">
 
