--- a/index.html
+++ b/index.html
@@ -12,27 +12,31 @@
 <body>
 
     <!--horizontal nav bar-->
-    <div id="nav">
+    <div id="nav" style="padding-left:12px;padding-right:16px;overflow:visible">
         <ul>
             <li>
-                <h1>Focus</h1>
-            </li>
-            <li><a
-                href="index.html">Home</a>
-            </li>
-            <li><a
-                href="timer.html">Timer</a>
+                <div id="logo">
+                    <shape id="circle">
+                        <div id="circle"></div>
+                    </shape>
+                    <a href="index.html">focuspoint</a>
+                </div>
             </li>
             <li><a
                 href="pulse.html">Pulse</a>
             </li>
+            <li><a
+                href="timer.html">Pomodoro Timer</a>
+            </li>
+            <li><a
+                href="">Study Music</a>
+            </li>
+
         </ul>
     </div>
 
-    <div id="description">
-        <h2>Introducing the ultimate productivity tool</h2>
-        <p>Our app helps you stay focused and achieve your goals.  With a variety of customizable options, including timers, noise blocking, and task tracking, our app helps you eliminate distractions and stay on task.</p>
-        <p>Whether you're working, studying, or trying to get things done at home, our app is the perfect solution for staying focused and getting things done.</p>
+    <div id="welcomescreen">
+
     </div>
     
 
