Dhowa is angry right now >:(

--- a/pulse.html
+++ b/pulse.html
@@ -22,7 +22,7 @@
             <h3>Calm yourself, focus on the point for as long as you can.<h3>
         </div>
         <div class="skip">
-
+            <h3><a href="/">skip >></a></h3>
         </div>
     </div>
 </body>
