--- a/timer.html
+++ b/timer.html
@@ -5,6 +5,7 @@
     <!--Use jquery-->
     <script src="scripts.js" defer></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://w.soundcloud.com/player/api.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="timerstyles.css">
     <title>focuspoint</title>
 </head>
@@ -14,27 +15,38 @@
     <div id="background">
         <div id="timer-row-1">
             <div id="timer-col-1">
-                <div id="timer">
-                    <div id="timer-nums">
-                        <div id="hours">00:</div>
-                        <div id="minutes">00</div>
-                        :
-                        <div id="seconds">00</div>
-                    </div>
-                    <div id="time-inputs">
+                <div id="timerholder">
+                    <div id="timer">
+                        <div id="timer-nums">
+                            <div id="hours">00:</div>
+                            <div id="minutes">00</div>
+                            :
+                            <div id="seconds">00</div>
+                        </div>
                         <input type="number" id="mins-input" min="0">
-                        <input type="number" id="secs-input" min="0">
                     </div>
-                </div>
-                <div id="buttons">
-                    <button onclick="inputChange()" id="start">Start</button>
-                    <button id="reset" onclick="callClearInterval()">Reset</button>
+                    <div id="buttons">
+                        <button onclick="inputChange()" id="start">Start</button>
+                        <button id="reset" onclick="callClearInterval()">Reset</button>
+                    </div>
                 </div>
             </div>
             <div id="timer-col-2">
             </div>
         </div>
         <div id="timer-row-2">
+            <iframe width="0" height="0" scrolling="no" frameborder="no" allow="autoplay"
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/305665701&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+            <div id="soundcloud">
+                <button onClick="prev()">|<<< </button>
+
+                        <button id="play" onClick="play()">▶</button>
+                        <button onClick="next()">>>|</button>
+                        <br><br>
+                        <div id="currentTrack"></div>
+                        <hr>
+                        <ul class="text-center" id="tracklist"></ul>
+            </div>
         </div>
     </div>
 </body>
