--- a/timer.html
+++ b/timer.html
@@ -11,7 +11,26 @@
 </head>
 
 <body>
-    <h1>FocusPoint</h1>
+    <div id="nav">
+        <ul>
+            <li>
+                <div id="logo">
+                    <shape id="circle">
+                        <div id="circle"></div>
+                    </shape>
+                    <a href="index.html">focuspoint</a>
+                </div>
+            </li>
+            <li><a href="pulse.html">Pulse</a>
+            </li>
+            <li><a href="timer.html">Pomodoro Timer</a>
+            </li>
+            <li><a href="">Study Music</a>
+            </li>
+
+        </ul>
+    </div>
+
     <div id="background">
         <div id="timer-row-1">
             <div id="timer-col-1">
@@ -45,7 +64,7 @@
                         <br><br>
                         <div id="currentTrack"></div>
                         <hr>
-                        <ul class="text-center" id="tracklist"></ul>
+                        <ol class="text-center" id="tracklist"></ol>
             </div>
         </div>
     </div>
