--- a/pulse.html
+++ b/pulse.html
@@ -10,11 +10,31 @@
 </head>
 
 <body>
-    <h1>FocusPoint</h1>
+    <!--horizontal nav bar-->
+    <div id="nav">
+        <ul>
+            <li >
+                <div id="logo">
+                    <div id="circle"></div>
+                    <a href="index.html">focuspoint</a>
+                </div>
+            </li>
+            <li ><a
+                href="pulse.html">Pulse</a>
+            </li>
+            <li><a
+                href="timer.html">Pomodoro Timer</a>
+            </li>
+            <li><a
+                href="">Study Music</a>
+            </li>
+        </ul>
+    </div>
+
     <div class="top">
         <div class="pulse">
             <div id="circlePulse"></div>
-            <div id="circle"></div>
+            <div id="centerCircle"></div>
         </div>
     </div>
     <div class="bottom">
@@ -22,7 +42,7 @@
             <h3>Calm yourself, focus on the point for as long as you can.<h3>
         </div>
         <div class="skip">
-            <h3><a href="/">skip >></a></h3>
+            <h3><a href="timer.html">skip >></a></h3>
         </div>
     </div>
 </body>
