--- a/timer.html
+++ b/timer.html
@@ -36,13 +36,17 @@
             <div id="timer-col-1">
                 <div id="timerholder">
                     <div id="timer">
+                        <p id="focus-disp"></p>
                         <div id="timer-nums">
                             <div id="hours">00:</div>
                             <div id="minutes">00</div>
                             :
                             <div id="seconds">00</div>
                         </div>
-                        <input type="number" id="mins-input" min="0">
+                        <div id="timeinputs">
+                            Focus (mins): <input type="number" id="study-input" min="0">
+                            Break (mins): <input type="number" id="break-input" min="0">
+                        </div>
                     </div>
                     <div id="buttons">
                         <button onclick="inputChange()" id="start">Start</button>
@@ -54,17 +58,21 @@
             </div>
         </div>
         <div id="timer-row-2">
-            <iframe width="0" height="0" scrolling="no" frameborder="no" allow="autoplay"
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/305665701&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-            <div id="soundcloud">
-                <button onClick="prev()">|<<< </button>
+            <div id="timer-col-1">
+                <iframe width="0" height="100%" scrolling="no" frameborder="no" allow="autoplay"
+                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/305665701&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+                <div id="soundcloud">
+                    <button onClick="prev()">|<<< </button>
 
-                        <button id="play" onClick="play()">▶</button>
-                        <button onClick="next()">>>|</button>
-                        <br><br>
-                        <div id="currentTrack"></div>
-                        <hr>
-                        <ol class="text-center" id="tracklist"></ol>
+                            <button id="play" onClick="play()">▶</button>
+                            <button onClick="next()">>>|</button>
+                            <br><br>
+                            <div id="currentTrack"></div>
+                            <hr>
+                            <ol class="text-center" id="tracklist"></ol>
+                </div>
+            </div>
+            <div id="timer-col-2">
             </div>
         </div>
     </div>
