--- a/timer.html
+++ b/timer.html
@@ -25,7 +25,7 @@
             </li>
             <li><a href="timer.html">Pomodoro Timer</a>
             </li>
-            <li><a href="">Study Music</a>
+            <li><a href="tasklist.html">Goals</a>
             </li>
 
         </ul>
