--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 href="timer.html">Pomodoro Timer</a>
             </li>
             <li><a
-                href="">Study Music</a>
+                href="tasklist.html">Goals</a>
             </li>
 
         </ul>
@@ -38,8 +38,9 @@
     <div id="welcomescreen">
         <!--put this p into a round box-->
         <div id="welcomebox">
+            <h3>Welcome to focuspoint</h3>
             <p>
-                Welcome to Focus, the ultimate productivity app designed to help you stay on task and achieve your goals. With its intuitive interface and powerful features, Focus makes it easy to stay organized and stay on track. Whether you're working on a big project, preparing for an exam, or just trying to stay focused on your daily tasks, Focus is the perfect tool to help you stay on top of your game. With its customizable timer and tracking features, you can set goals, track your progress, and stay motivated to reach your full potential.
+                The ultimate productivity app designed to help you stay on task and achieve your goals. With its intuitive interface and powerful features, Focus makes it easy to stay organized and stay on track. Whether you're working on a big project, preparing for an exam, or just trying to stay focused on your daily tasks, Focus is the perfect tool to help you stay on top of your game. With its customizable timer and tracking features, you can set goals, track your progress, and stay motivated to reach your full potential.
             </p>
         </div>
     </div>
