--- a/tasklist.html
+++ b/tasklist.html
@@ -5,21 +5,24 @@
     <!--Use jquery-->
     <script src="scripts.js" defer></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="pulse.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>focuspoint</title>
 </head>
 
 <body>
+
     <!--horizontal nav bar-->
     <div id="nav">
         <ul>
-            <li >
+            <li>
                 <div id="logo">
-                    <div id="circle"></div>
+                    <shape id="circle">
+                        <div id="circle"></div>
+                    </shape>
                     <a href="index.html">focuspoint</a>
                 </div>
             </li>
-            <li ><a
+            <li><a
                 href="pulse.html">Pulse</a>
             </li>
             <li><a
@@ -28,23 +31,9 @@
             <li><a
                 href="tasklist.html">Goals</a>
             </li>
+
         </ul>
     </div>
 
-    <div class="top">
-        <div class="pulse">
-            <div id="circlePulse"></div>
-            <div id="centerCircle"></div>
-        </div>
-    </div>
-    <div class="bottom">
-        <div class="calm">
-            <h3>Calm yourself, focus on the point for as long as you can.<h3>
-        </div>
-        <div class="skip">
-            <h3><a href="timer.html">skip >></a></h3>
-        </div>
-    </div>
-</body>
-
+    </body>
 </html>
