--- a/timer.html
+++ b/timer.html
@@ -66,8 +66,9 @@
                 </div>
             </div>
         </div>
+        <div id="spacer"></div>
         <div id="timer-row-2">
-            <div id="timer-col-1">
+            <div id="timer-col-3">
                 <iframe width="0" height="100%" scrolling="no" frameborder="no" allow="autoplay"
                     src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/305665701&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                 <div id="soundcloud">
@@ -81,8 +82,7 @@
                             <ol class="text-center" id="tracklist"></ol>
                 </div>
             </div>
-            <div id="timer-col-2">
-            </div>
+
         </div>
     </div>
 </body>
